youfull/objects/Sales_Org_Summary__c.object
<CustomObject>
    <fields>
        <fullName>ACTVTY_CNT__c</fullName>
        <label>Activity Count</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACTVTY_DIV_RNK__c</fullName>
        <label>Activity Division Rank</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACTVTY_LCA_CNT__c</fullName>
        <label>Activity Last Analisys</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACTVTY_My_Actions_CNT__c</fullName>
        <label>Activity My Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACTVTY_PLAN_CNT__c</fullName>
        <label>Activity Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACTVTY_RES_CNT__c</fullName>
        <formula>IF(ACTVTY_PLAN_CNT__c == 0, 0, ACTVTY_CNT__c / ACTVTY_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACTVTY_SPPY_CNT__c</fullName>
        <label>Activity SPPY Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACTVTY_VAR_CNT__c</fullName>
        <formula>IF ( ACTVTY_PLAN_CNT__c = 0,0,ACTVTY_CNT__c / ACTVTY_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Attainment</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACTVTY_VAR_DIFF_CNT__c</fullName>
        <formula>TEXT(ACTVTY_PLAN_CNT__c - ACTVTY_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Variance Difference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACTV_REP_CNT__c</fullName>
        <label>Act. Reps Invoiced</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACTV_REP_DIV_RNK__c</fullName>
        <label>Act. Reps Division Rank</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACTV_REP_FRCST_CNT__c</fullName>
        <label>Active Rep Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACTV_REP_FRCST_GOAL__c</fullName>
        <label>Act. Reps % Goal Achieved</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACTV_REP_FRCST_INPUT__c</fullName>
        <label>Active Rep Forecast Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACTV_REP_LCA_CNT__c</fullName>
        <label>Act. Reps Last Campaign Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACTV_REP_My_Actions_CNT__c</fullName>
        <label>Act. Reps My Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACTV_REP_PLAN_CNT__c</fullName>
        <label>Act. Reps Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACTV_REP_PLAN_SPPY_CNT__c</fullName>
        <label>Act. Reps SPPY Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACTV_REP_RES_CNT__c</fullName>
        <formula>IF(ACTV_REP_PLAN_CNT__c == 0, 0, ACTV_REP_CNT__c / ACTV_REP_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Act. Reps Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACTV_REP_SPPY_CNT__c</fullName>
        <label>Act. Reps PY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACTV_REP_VAR_CNT__c</fullName>
        <formula>IF ( ACTV_REP_PLAN_CNT__c = 0,0,ACTV_REP_CNT__c / ACTV_REP_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Act. Reps % Attainment</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACTV_REP_VAR_DIFF_CNT__c</fullName>
        <formula>TEXT(ACTV_REP_PLAN_CNT__c - ACTV_REP_CNT__c)</formula>
        <label>Act. Reps Variance Difference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDTNS_CNT__c</fullName>
        <label>Additions Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADDTNS_DIV_RNK__c</fullName>
        <label>Additions Division Rank</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADDTNS_LCA_CNT__c</fullName>
        <label>Additions Last Analisys</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADDTNS_My_Actions_CNT__c</fullName>
        <label>Additions My Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADDTNS_PLAN_CNT__c</fullName>
        <label>Additions Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADDTNS_RES_CNT__c</fullName>
        <formula>IF(ADDTNS_PLAN_CNT__c == 0, 0, ADDTNS_CNT__c / ADDTNS_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additions Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADDTNS_SPPY_CNT__c</fullName>
        <label>Additions SPPY Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADDTNS_VAR_CNT__c</fullName>
        <formula>IF ( ADDTNS_PLAN_CNT__c = 0,0,ADDTNS_CNT__c / ADDTNS_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additions Attainment</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADDTNS_VAR_DIFF_CNT__c</fullName>
        <formula>TEXT(ADDTNS_PLAN_CNT__c - ADDTNS_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additions Variance Difference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPT_CNT__c</fullName>
        <label>Appointments Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APPT_DIV_RNK__c</fullName>
        <label>Appointments Division Rank</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APPT_FRCST_CNT__c</fullName>
        <description>Forecast activity report. Forecast for appointments</description>
        <label>Appointments Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APPT_FRCST_GOAL__c</fullName>
        <label>Appointments % Goal Achieved</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APPT_FRCST_INPUT__c</fullName>
        <label>Appointments Forecast Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APPT_LCA_CNT__c</fullName>
        <label>Appointments Last Campaign Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APPT_My_Actions_CNT__c</fullName>
        <label>Appointments My Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APPT_PLAN_CNT__c</fullName>
        <label>Appointments Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APPT_PLAN_SPPY_CNT__c</fullName>
        <label>Appointments SPPY Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APPT_RES_CNT__c</fullName>
        <formula>IF(APPT_PLAN_CNT__c == 0, 0, APPT_CNT__c / APPT_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointments Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APPT_SPPY_CNT__c</fullName>
        <label>Appointments SPPY Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APPT_VAR_CNT__c</fullName>
        <formula>IF(APPT_PLAN_CNT__c = 0, 0, APPT_CNT__c / APPT_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointments % Attainment</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APPT_VAR_DIFF_CNT__c</fullName>
        <formula>TEXT(APPT_PLAN_CNT__c - APPT_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appointments Variance Difference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVG_ORD_CNT__c</fullName>
        <label>Average Order Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_ORD_DIV_RNK__c</fullName>
        <label>Average Order Division Rank</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_ORD_LCA_CNT__c</fullName>
        <label>Average Order Last Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVG_ORD_My_Actions_CNT__c</fullName>
        <label>Average Order My Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVG_ORD_PLAN_CNT__c</fullName>
        <label>Average Order Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_ORD_RES_CNT__c</fullName>
        <formula>IF(AVG_ORD_PLAN_CNT__c == 0, 0, AVG_ORD_CNT__c / AVG_ORD_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Order Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AVG_ORD_SPPY_CNT__c</fullName>
        <label>Average Order SPPY Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_ORD_VAR_CNT__c</fullName>
        <formula>IF ( AVG_ORD_PLAN_CNT__c = 0,0,AVG_ORD_CNT__c / AVG_ORD_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Order Attainment</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AVG_ORD_VAR_DIFF_CNT__c</fullName>
        <formula>TEXT(AVG_ORD_PLAN_CNT__c - AVG_ORD_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Order Variance Difference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analysis_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Analysis Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLD_SLS_CMPGN_NR__c</fullName>
        <label>Field Campaign Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INVC_AWRD_SLS_AMT__c</fullName>
        <label>Invoiced Order Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IS_CURR_CMPGN__c</fullName>
        <formula>IF (MRKT_KEY__r.CMPGN_NR__c = FLD_SLS_CMPGN_NR__c , &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_NEXT_1_CMPGN__c</fullName>
        <formula>IF (MRKT_KEY__r.NEXT_1_CMPGN_NR__c = FLD_SLS_CMPGN_NR__c , &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Next Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_PREV_1_CMPGN__c</fullName>
        <formula>IF (MRKT_KEY__r.PREV_1_CMPGN_NR__c = FLD_SLS_CMPGN_NR__c , &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Prev Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_PREV_OR_CURR_OR_NEXT_CMPGN__c</fullName>
        <formula>IF ( OR (
        (MRKT_KEY__r.PREV_1_CMPGN_NR__c = OPERTNL_CMPGN_NR__c), 
		(MRKT_KEY__r.CMPGN_NR__c = OPERTNL_CMPGN_NR__c), 
		(MRKT_KEY__r.NEXT_1_CMPGN_NR__c = OPERTNL_CMPGN_NR__c) ), 
        &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Previous or Current or Next Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOA0_CNT__c</fullName>
        <label>LOA0 Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA0_LCA_CNT__c</fullName>
        <label>LOA0 Last Campaign Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOA0_My_Actions_CNT__c</fullName>
        <label>LOA0 My Actions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOA0_PLAN_CNT__c</fullName>
        <label>LOA0 Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA0_RES_CNT__c</fullName>
        <formula>IF(LOA0_PLAN_CNT__c == 0, 0, LOA0_CNT__c / LOA0_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOA0 Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LOA0_VAR_DIFF_CNT__c</fullName>
        <formula>TEXT(LOA0_PLAN_CNT__c - LOA0_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOA0 Variance Difference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOA1_6_NET_SLS_FRCST_GOAL__c</fullName>
        <label>LOA1-6 % Goal Achieved</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LOA1_6_NET_SLS_FRCST_INPUT__c</fullName>
        <label>LOA1-6 Forecast Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA1_NET_SLS_AMT__c</fullName>
        <label>LOA1 Sales Actual</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA1_NET_SLS_DIV_RNK__c</fullName>
        <label>LOA1 Sales Division Rank</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA1_NET_SLS_FRCST_GOAL__c</fullName>
        <label>LOA1 % Goal Achieved</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LOA1_NET_SLS_FRCST_INPUT__c</fullName>
        <label>LOA1 Sales Forecast Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA1_NET_SLS_LCA__c</fullName>
        <label>LOA1 Sales Last Campaign Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOA1_NET_SLS_My_Actions__c</fullName>
        <label>LOA1 Sales My Actions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOA1_NET_SLS_PLAN_AMT__c</fullName>
        <label>LOA1 Sales Plan</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA1_NET_SLS_PLAN_SPPY_AMT__c</fullName>
        <label>LOA1 Sales SPPY Plan</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA1_NET_SLS_RES__c</fullName>
        <formula>IF(LOA1_NET_SLS_PLAN_AMT__c == 0, 0, LOA1_NET_SLS_AMT__c / LOA1_NET_SLS_PLAN_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOA1 Sales Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LOA1_NET_SLS_SPPY_AMT__c</fullName>
        <label>LOA1 Sales SPPY Actual</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA1_NET_SLS_VAR_DIFF_CNT__c</fullName>
        <formula>TEXT(LOA1_NET_SLS_PLAN_AMT__c - LOA1_NET_SLS_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOA1 Sales Variance Variance Difference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOA1_NET_SLS_VAR__c</fullName>
        <formula>IF(LOA1_NET_SLS_PLAN_AMT__c == 0, 0, LOA1_NET_SLS_AMT__c / LOA1_NET_SLS_PLAN_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOA1 Sales Variance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_NET_SLS_AMT__c</fullName>
        <label>LOA1-6 Sales Actual</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_NET_SLS_DIV_RNK__c</fullName>
        <label>LOA1-6 Sales Division Rank</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_NET_SLS_LCA_CNT__c</fullName>
        <label>LOA1-6 Last Campaign Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_NET_SLS_LCA__c</fullName>
        <label>LOA1-6 Sales Last Campaign Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_NET_SLS_My_Actions_CNT__c</fullName>
        <label>LOA1-6 My Actions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_NET_SLS_My_Actions__c</fullName>
        <label>LOA1-6 Sales My Actions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_NET_SLS_PLAN_AMT__c</fullName>
        <label>LOA1-6 Sales Plan</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_NET_SLS_PLAN_SPPY_AMT__c</fullName>
        <label>LOA1-6 Sales SPPY Plan</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_NET_SLS_RES_CNT__c</fullName>
        <formula>IF(LOA_1_6_NET_SLS_PLAN_AMT__c == 0, 0, LOA_1_6_NET_SLS_AMT__c / LOA_1_6_NET_SLS_PLAN_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOA1-6 Net Sales Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_NET_SLS_RES__c</fullName>
        <formula>IF(LOA_1_6_NET_SLS_PLAN_AMT__c == 0, 0, LOA_1_6_NET_SLS_AMT__c / LOA_1_6_NET_SLS_PLAN_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOA1-6 Sales Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_NET_SLS_SPPY_AMT__c</fullName>
        <label>LOA1-6 sales sppy Actual</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_NET_SLS_VAR_DIFF_CNT__c</fullName>
        <formula>TEXT(LOA_1_6_NET_SLS_PLAN_AMT__c - LOA_1_6_NET_SLS_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOA1-6 Sales Sales Variance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOA_1_6_NET_SLS_VAR__c</fullName>
        <formula>IF(LOA_1_6_NET_SLS_PLAN_AMT__c == 0, 0, LOA_1_6_NET_SLS_AMT__c / LOA_1_6_NET_SLS_PLAN_AMT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOA1-6 Sales Variance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LOA_NR__c</fullName>
        <label>LOA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LST_DT_RSPD__c</fullName>
        <label>Last Date Responded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MLPLN_CD__c</fullName>
        <label>Mail Plan</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_ACCT_KEY__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>MRKT_ACCT_KEY</inlineHelpText>
        <label>Sales Org Manager Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_ID_LVL_SLS_ORG_CD_KEY__c</fullName>
        <label>Sales Org Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_KEY__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Sales Org Summary</relationshipLabel>
        <relationshipName>Sales_Org_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_1_CNT__c</fullName>
        <label>Market Tag 1 Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_1_DIV_RNK__c</fullName>
        <label>market tag 1 division rank</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_1_FRCST_CNT__c</fullName>
        <description>Forecast activity report. Forecast for # of candidates (market tag 1)</description>
        <label># of Candidates Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_1_FRCST_GOAL__c</fullName>
        <label># of Candidates % Goal Achieved</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_1_FRCST_INPUT__c</fullName>
        <label># of Candidates Forecast Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_1_LCA_CNT__c</fullName>
        <label>Market Tag 1 Last Campaign Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_1_My_Actions_CNT__c</fullName>
        <label>Market Tag 1 My Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_1_PLAN_CNT__c</fullName>
        <label>Market Tag 1 Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_1_PLAN__c</fullName>
        <label>market tag 1 plan (DO NOT USE)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_1_RES_CNT__c</fullName>
        <formula>IF(MRKT_TAG_1_PLAN_CNT__c == 0, 0, MRKT_TAG_1_CNT__c / MRKT_TAG_1_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Tag 1 Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_1_SLS_ORG_SUM_CNT__c</fullName>
        <label>Market Tag Zone 1 Performance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_1_SPPY_PLAN__c</fullName>
        <label>market tag 1 sppy plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_1_SPPY__c</fullName>
        <label>market tag 1 sppy actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_1_TAR_LAST_CMPGN_CNT__c</fullName>
        <label>market 1 tag title at risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_1_VAR_CNT__c</fullName>
        <formula>IF(MRKT_TAG_1_PLAN_CNT__c == 0, 0, MRKT_TAG_1_CNT__c / MRKT_TAG_1_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarketTag 1 Variance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_1_VAR_DIFF_CNT__c</fullName>
        <formula>TEXT(MRKT_TAG_1_PLAN_CNT__c - MRKT_TAG_1_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarketTag 1 Variance Difference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_1__c</fullName>
        <label>Market tag 1 (DO NOT USE)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_2_CNT__c</fullName>
        <label>Market Tag 2 Actual</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_2_DIV_RNK__c</fullName>
        <label>market tag 2 division rank</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_2_FRCST_CNT__c</fullName>
        <description>Forecast activity report. Forecast for opportunity meeting (market tag 2)</description>
        <label>Opportunity Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_2_FRCST_GOAL__c</fullName>
        <label>Opportunity % Goal Achieved</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_2_FRCST_INPUT__c</fullName>
        <label>Opportunity Forecast Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_2_LCA_CNT__c</fullName>
        <label>Market Tag 2 Last Campaign Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_2_My_Actions_CNT__c</fullName>
        <label>Market Tag 2 My Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_2_PLAN_CNT__c</fullName>
        <label>Market Tag 2 Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_2_PLAN__c</fullName>
        <label>Market Tag 2 Plan (DO NOT USE)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_2_RES_CNT__c</fullName>
        <formula>IF(MRKT_TAG_2_PLAN_CNT__c == 0, 0, MRKT_TAG_2_CNT__c / MRKT_TAG_2_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Tag 2 Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_2_SLS_ORG_SUM_AMT__c</fullName>
        <label>Market Tag Zone 2 Performance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_2_SPPY_CNT__c</fullName>
        <label>market tag 2 sppy actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_2_SPPY_PLAN__c</fullName>
        <label>market tag 2 sppy plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_2_SPPY__c</fullName>
        <label>market tag 2 sppy actual (DO NOT USE)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_2_VAR_CNT__c</fullName>
        <formula>IF(MRKT_TAG_2_PLAN_CNT__c == 0, 0, MRKT_TAG_2_CNT__c / MRKT_TAG_2_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarketTag 2 Variance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_2_VAR_DIFF_CNT__c</fullName>
        <formula>TEXT(MRKT_TAG_2_PLAN_CNT__c - MRKT_TAG_2_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MarketTag 2 Variance Difference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_2__c</fullName>
        <label>Market tag 2(DO NOT USE)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_3_CNT__c</fullName>
        <label>Market Tag 3 Actual</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_3_DIV_RNK__c</fullName>
        <label>market tag 3 division rank</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_3_FRCST_GOAL__c</fullName>
        <label>Market Tag 3 % Goal Achieved</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_3_FRCST_INPUT__c</fullName>
        <label>Market Tag 3 Forecast Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_3_LCA_CNT__c</fullName>
        <label>Market Tag 3 Last Campaign Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_3_My_Actions_CNT__c</fullName>
        <label>Market Tag 3 My Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_3_PLAN_CNT__c</fullName>
        <label>Market Tag 3 Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_3_PLAN__c</fullName>
        <label>market tag 3 plan (DO NOT USE)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_3_RES_CNT__c</fullName>
        <formula>IF(MRKT_TAG_3_PLAN_CNT__c == 0, 0, MRKT_TAG_3_CNT__c / MRKT_TAG_3_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Tag 3 Results</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_3_SLS_ORG_SUM_PCT__c</fullName>
        <label>Market Tag Zone 3 Performance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_3_SPPY_CNT__c</fullName>
        <label>market tag 3 sppy actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_3_SPPY_PLAN__c</fullName>
        <label>market tag 3 sppy plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_3_SPPY__c</fullName>
        <label>market tag 3 sppy actual (DO NOT USE)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_3_VAR_CNT__c</fullName>
        <formula>IF(MRKT_TAG_3_PLAN_CNT__c == 0, 0, MRKT_TAG_3_CNT__c / MRKT_TAG_3_PLAN_CNT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Tag 3 Variance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
</CustomObject>